--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 :root {
 	--white: #fff;
-	
+
 	--gray-100: #e1e1e6;
 	--gray-300: #c4c4cc;
 	--gray-400: #8d8d99;
@@ -17,6 +17,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
 }
 
 body {
